fixed overflow

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     height: 100%;
     width: 100%;
     background-color: rgb(255, 255, 255);
+    margin: 0;
 }
 
 nav{
@@ -32,7 +33,6 @@ nav{
 #py-shell{
     margin-left:30px;
     margin-right:30px;
-    padding: auto;
     height: 50%;
     border-style: solid;
     border-color: rgb(82, 81, 81);
@@ -49,7 +49,8 @@ nav{
     resize: none;
 }
 
-#terminal{
-    height: 100%;
+py-terminal{
     width: 100%;
-}
+    height: 100%;
+    overflow: scroll;
+  }
